# asmr-helper

./: .mcp.json  CLAUDE.md  README.md  build.sh  design.md
native/: CMakeLists.txt  Makefile  Makefile.win  asmr-helper
native/build_static/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  asmr-helper.sln  asmr-helper.vcxproj  asmr-helper.vcxproj.filters  cmake_install.cmake
native/build_static/Release/: avcodec.lib  avformat.lib  swscale.lib
native/build_static/asmr-helper.dir/Release/: asmr-helper.exe.recipe
native/build_static/asmr-helper.dir/Release/asmr-helper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
native/build_static/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
native/build_static/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
native/build_static/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
native/build_static/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
native/ffmpeg-dev/include/: zconf.h
native/ffmpeg-dev/include/SDL2/: SDL_revision.h
native/ffmpeg-dev/include/jxl/: version.h
native/ffmpeg-dev/include/libavutil/: ffversion.h
native/ffmpeg-dev/lib/: Iex-3_3.lib  IlmThread-3_3.lib  Imath-3_1.lib  OpenEXR-3_3.lib  OpenEXRCore-3_3.lib  OpenEXRUtil-3_3.lib  SDL2_test.lib  SDL2main.lib  ass.lib  brotlidec.lib  fribidi.lib  harfbuzz-subset.lib  harfbuzz.lib  hwy.lib  jxl.lib  jxl_cms.lib  jxl_threads.lib  libass.la  libfribidi.la  libsharpyuv.lib  libwebp.lib  libwebpdecoder.lib  libwebpdemux.lib  libwebpmux.lib  libx264.dll.lib  libx265.lib  x265-static.lib
native/ffmpeg-dev/lib/cmake/Imath/: ImathTargets.cmake
native/ffmpeg-dev/lib/cmake/OpenEXR/: OpenEXRTargets-release.cmake  OpenEXRTargets.cmake
native/ffmpeg-dev/lib/cmake/harfbuzz/: harfbuzzConfig.cmake
native/ffmpeg-dev/lib/pkgconfig/: Imath.pc  OpenEXR.pc  ffnvcodec.pc  fribidi.pc  harfbuzz-subset.pc  harfbuzz.pc  libass.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libjxl.pc  libjxl_cms.pc  libjxl_threads.pc  libpostproc.pc  libsharpyuv.pc  libswresample.pc  libswscale.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  libwebpmux.pc  sdl2.pc  vpx.pc  x264.pc  x265.pc
native/ffmpeg-dev/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg.1  ffplay-all.1  ffplay.1  ffprobe-all.1  ffprobe.1
native/scripts/: download-ffmpeg.ps1  setup-ffmpeg-dev.ps1
native/src/: ffmpeg_engine.cpp  ffmpeg_engine.h  http.cpp  http.h  linenoise_win.c  main.cpp  platform.cpp  platform.h  ui.cpp  ui.h  video.cpp  video.h
scripts/: download-ffmpeg.ps1  download-ffmpeg.sh
ts/: package-lock.json  package.json
ts/src/: backend.ts  index.ts  types.ts
